--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "@stencil/core": "^1.12.2",
-    "@stencil/router": "^1.0.1"
+    "@stencil/router": "^1.0.1",
+    "@stencil/sass": "^1.3.1"
   },
   "license": "MIT"
 }
