--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "devDependencies": {
     "@stencil/core": "^1.12.2",
     "@stencil/router": "^1.0.1",
-    "@stencil/sass": "^1.3.1"
+    "@stencil/sass": "^1.3.1",
+    "@stencil/store": "^1.3.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "local-db": "^2.0.0",
+    "timeago.js": "^4.0.2"
+  }
 }
